
- #12681: Fix TSan false positives due to volatile write handling
  (Olivier Nicole, Fabrice Buoro and Anmol Sahoo, review by Luc Maranget,
   Gabriel Scherer, Hernan Ponce de Leon and Xavier Leroy)

- #12743: Use pthread_sigmask instead of sigprocmask
  Updates usage of sigprocmask to pthread_sigmask in otherlibs/unix.
  (Max Slater, review by Miod Vallat and Xavier Leroy)

### Code generation and optimizations:

- #11239: on x86-64 and RISC-V, reduce alignment of OCaml stacks from 16 to 8.
  This reduces stack usage.  It's only C stacks that require 16-alignment.
  (Xavier Leroy, review by Gabriel Scherer and Stephen Dolan)

- #12311: on POWER, 32-bit FP numbers stored in memory (e.g. in bigarrays)
  were not correctly rounded sometimes.
  (Xavier Leroy, review by Anil Madhavapeddy and Tim McGilchrist)

- #12551: Propagate classification of recursive bindings from Rec_check
  (Vincent Laviron, review by Gabriel Scherer)

- #1809, #12181: rewrite `compare x y op 0` to `x op y` when values are integers
  (Xavier Clerc, Stefan Muenzel, review by Gabriel Scherer and Vincent Laviron)

### Standard library:

- #12716: Add `Format.pp_print_nothing` function.
  (Léo Andrès, review by Gabriel Scherer and Nicolás Ojeda Bär)

- #11563: Add the Dynarray module to the stdlib. Dynamic arrays are
  arrays whose length can be changed by adding or removing elements at
  the end, similar to 'vectors' in C++ or Rust.
  (Gabriel Scherer, Simon Cruanes and Florian Angeletti, review by
   Daniel Bünzli, Guillaume Munch-Maccagnoni, Clément Allain,
   Damien Doligez, Wiktor Kuchta and Pieter Goetschalckx)

* #10775, #12499: Half-precision floating-point elements in Bigarray.
  (Anton Yabchinskiy, review by Xavier Leroy and Nicolás Ojeda Bär)

- #11517, #12477: Expose pp_infinity in interface of the format module, and
  check that margin is less than pp_infinity when setting or checking geometry.
  (Janith Petangoda, reported by Simmo Saan, reviewed by Florian Angeletti,