@@ -19,16 +19,23 @@
 
 #include <stddef.h>
 #include <stdio.h>
+#include <stdalign.h>
 
 #include "misc.h"
 
 #define NUM_EXTRA_PARAMS 64
 typedef value extra_params_area[NUM_EXTRA_PARAMS];
 
+/* Alignment is necessary in caml_domain_state, since the code
+ * generated by ocamlopt makes direct references into the domain state
+ * structure, which is stored in a register on many platforms. For
+ * this to work, we need to be able to compute the exact offset of
+ * each member. */
+
 /* This structure sits in the TLS area and is also accessed efficiently
  * via native code, which is why the indices are important */
 typedef struct {
-#define DOMAIN_STATE(type, name) CAMLalign(8) type name;
+#define DOMAIN_STATE(type, name) alignas(8) type name;
 #include "domain_state.tbl"
 #undef DOMAIN_STATE
 } caml_domain_state;
