@@ -92,8 +92,6 @@
 
 #undef FUNCTION_SECTIONS
 
-#undef SUPPORTS_ALIGNED_ATTRIBUTE
-
 #undef SUPPORTS_TREE_VECTORIZE
 
 #undef USE_MMAP_MAP_STACK
